# DCL_CvBlobs

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  CvBlobsConfig.cmake.in
src/Components/: CMakeLists.txt
src/Components/BlobExtractor/: BlobExtractor_Processor.cpp  BlobExtractor_Processor.hpp  CMakeLists.txt
src/Types/: Blob.cpp  Blob.hpp  BlobContour.cpp  BlobContour.hpp  BlobOperators.cpp  BlobOperators.hpp  BlobResult.cpp  BlobResult.hpp  CMakeLists.txt
tasks/: SimpleDetector.xml
